--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jsfunctions",
-  "version": "1.0.0",
-  "description": "JS helper functions",
+  "name": "jshelperpack",
+  "version": "1.0.1",
+  "description": "JS helper pack",
   "source": "src/index.ts",
   "main": "dist/index.js",
   "module": "dist/index.module.js",
@@ -13,7 +13,7 @@
     "dist/**"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "publish": "tsc && npm publish --access public"
   },
   "keywords": [
@@ -35,10 +35,10 @@
   "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sagynbek/ntransform.git"
+    "url": "git+https://github.com/sagynbek/jshelperpack.git"
   },
   "bugs": {
-    "url": "https://github.com/sagynbek/ntransform/issues"
+    "url": "https://github.com/sagynbek/jshelperpack/issues"
   },
-  "homepage": "https://github.com/sagynbek/ntransform#readme"
+  "homepage": "https://github.com/sagynbek/jshelperpack#readme"
 }
