--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jshelperpack",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "JS helper pack",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -17,13 +17,11 @@
     "publish-public": "tsc && npm publish --access public"
   },
   "keywords": [
-    "transform",
-    "update",
-    "change",
-    "name",
-    "file",
-    "directory",
-    "folder"
+    "helpers",
+    "string",
+    "array",
+    "common",
+    "type-checking"
   ],
   "author": "Sagynbek Kenzhebaev",
   "license": "ISC",
